feat: improve page readability by css edits

--- a/static/style/colors.css
+++ b/static/style/colors.css
@@ -13,3 +13,11 @@
 .bg-green {
 	background-color: #356048;
 }
+
+.bg-pink {
+	background-color: #9B5CA6;
+}
+
+.bg-purple {
+	background-color: #46239B;
+}
