--- a/static/style/common.css
+++ b/static/style/common.css
@@ -3,7 +3,7 @@
 	src: url("/assets/SUSE-VariableFont_wght.ttf") format("truetype"),
 }
 
-p, label, h1, h2, h3, h4 {
+p, label, h1, h2, h3, h4, tr {
 	font-family: "SUSE"
 
 }
@@ -43,7 +43,7 @@ button:hover {
 	body { 
 		background-color: #22262E;
 	}
-	p, label, h1, h2, h3, h4 {
+	p, label, h1, h2, h3, h4, tr {
 		color: #CBD3E3;
 
 	}
@@ -55,7 +55,7 @@ button:hover {
 	body { 
 		background-color: #DADFEB;
 	}
-	p, label, h1, h2, h3, h4 {
+	p, label, h1, h2, h3, h4, tr {
 		color: #191A1B;
 
 	}
